Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27591

Temporary kit created for imported build instead of using existing kit

XMLWordPrintable

    • macOS
    • 948f0070fa (qt-creator/qt-creator/8.0) 948f0070fa (qt-creator/qt-creator/master)

      Similar to QTCREATORBUG-27523, I still can't manage to import a build of qtdeclarative using an existing kit. It always creates a temporary kit.

      These are the steps I took (dunno how to link to an attachment without it becoming an embedded image, so no nicely formatted list, sorry):

      Removed CMakeLists.txt.user from qtdeclarative sources.

      Removed old Qt version and kit for this Qt build.

      Opened Creator and created a Qt version from the build:

      Hit Apply.

      Switched to the Kits tab, clicked Add to create a new kit from scratch. Gave it a name (qt-dev2-debug-non-fw). Ensured that the compilers were the same as the official Qt builds from the online installer, as the other build I have still has it incorrectly detected as GCC (from QTCREATORBUG-27523):

      The final created kit:

      Switched to the qt-dev2-qtdeclarative session. The Configure Project screen came up.

      I unchecked the checked default kit, expanded the "Import Build From..." section and typed in the path to the build: /Users/mitch/dev/qt-dev2-debug-non-fw/qtdeclarative.

      Hit Import and the temporary kit was created instead of it picking the one I just created:

      What's funny is that the kit that it created had errors:

      For what it's worth, this is the list of compilers:

      It says that GCC is a manually added compiler, which is strange because I only got this machine a few weeks ago and have never manually added a compiler.

        1. Screen Shot 2022-05-26 at 09.33.56.png
          1.55 MB
          Mitch Curtis
        2. Screen Shot 2022-05-26 at 09.37.46.png
          1.36 MB
          Mitch Curtis
        3. Screen Shot 2022-05-26 at 09.39.08.png
          1.37 MB
          Mitch Curtis
        4. Screen Shot 2022-05-26 at 09.43.31.png
          188 kB
          Mitch Curtis
        5. Screen Shot 2022-05-26 at 09.44.33.png
          1.10 MB
          Mitch Curtis
        6. Screen Shot 2022-05-26 at 09.45.49.png
          771 kB
          Mitch Curtis
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes